// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditPanel /> Match Snapshot 1`] = `
<div
  className="panel-edit"
>
  <h2
    style={
      Object {
        "color": "#2f2f2f",
      }
    }
  >
    Edit Bank and Channel Names
  </h2>
  <form
    onSubmit={[Function]}
  >
    <EditForm
      handleBankChange={[Function]}
      handleChannelNameChange={[Function]}
      plan={
        Object {
          "bank_names": Object {
            "1": Object {
              "channels": Object {
                "1": "Ch. 1",
                "2": "Ch. 2",
                "3": "Ch. 3",
                "4": "Ch. 4",
                "5": "Ch. 5",
                "6": "Ch. 6",
                "7": "Ch. 7",
                "8": "Ch. 8",
              },
              "name": "Bank 1",
            },
            "2": Object {
              "channels": Object {
                "1": "Ch. 1",
                "2": "Ch. 2",
                "3": "Ch. 3",
                "4": "Ch. 4",
                "5": "Ch. 5",
                "6": "Ch. 6",
                "7": "Ch. 7",
                "8": "Ch. 8",
              },
              "name": "Bank 2",
            },
            "3": Object {
              "channels": Object {
                "1": "Ch. 1",
                "2": "Ch. 2",
                "3": "Ch. 3",
                "4": "Ch. 4",
                "5": "Ch. 5",
                "6": "Ch. 6",
                "7": "Ch. 7",
                "8": "Ch. 8",
              },
              "name": "Bank 3",
            },
            "4": Object {
              "channels": Object {
                "1": "Ch. 1",
                "2": "Ch. 2",
                "3": "Ch. 3",
                "4": "Ch. 4",
                "5": "Ch. 5",
                "6": "Ch. 6",
                "7": "Ch. 7",
                "8": "Ch. 8",
              },
              "name": "Bank 4",
            },
          },
        }
      }
      uistatus={
        Object {
          "bank": Object {
            "1": "READY",
            "2": "DISABLED",
            "3": "READY",
            "4": "READY",
          },
        }
      }
      ws_sender={[MockFunction]}
    />
    <div
      className="row text-center button-edit"
    >
      <div
        className="col-sm-4"
      >
        <button
          className="btn  btn-green btn-edit-panel btn-group-2"
          id="submit-edit"
          type="submit"
        >
          Ok
        </button>
      </div>
      <div
        className="col-sm-4"
      >
        <button
          className="btn btn-cancel btn-edit-panel btn-group-2"
          id="cancel-btn"
          onClick={[Function]}
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </form>
  <Modal
    animationDuration={500}
    blockScroll={true}
    center={true}
    classNames={Object {}}
    classes={
      Object {
        "closeButton": "styles_closeButton__20ID4",
        "closeIcon": "styles_closeIcon__1QwbI",
        "modal": "styles_modal__gNwvD",
        "modalCenter": "styles_modalCenter__L9F2w",
        "overlay": "styles_overlay__CLSq-",
        "transitionEnter": "styles_transitionEnter__3j_-a",
        "transitionEnterActive": "styles_transitionEnterActive___eQs7",
        "transitionExit": "styles_transitionExit__1KmEf",
        "transitionExitActive": "styles_transitionExitActive__1nQXw",
      }
    }
    closeIconSize={28}
    closeIconSvgPath={
      <path
        d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
      />
    }
    closeOnEsc={true}
    closeOnOverlayClick={true}
    focusTrapOptions={Object {}}
    focusTrapped={true}
    onClose={[Function]}
    open={false}
    role="dialog"
    showCloseIcon={true}
    styles={Object {}}
  >
    <h2
      style={
        Object {
          "color": "black",
        }
      }
    >
      Uh Oh!
    </h2>
    <p
      style={
        Object {
          "color": "black",
        }
      }
    >
      Each Label must be at least one character in length.
    </p>
  </Modal>
</div>
`;

exports[`<EditPanel /> Test Modal is open 1`] = `
<div
  className="panel-edit"
>
  <h2
    style={
      Object {
        "color": "#2f2f2f",
      }
    }
  >
    Edit Bank and Channel Names
  </h2>
  <form
    onSubmit={[Function]}
  >
    <EditForm
      handleBankChange={[Function]}
      handleChannelNameChange={[Function]}
      plan={
        Object {
          "bank_names": Object {
            "1": Object {
              "channels": Object {
                "1": "Ch. 1",
                "2": "Ch. 2",
                "3": "Ch. 3",
                "4": "Ch. 4",
                "5": "Ch. 5",
                "6": "Ch. 6",
                "7": "Ch. 7",
                "8": "Ch. 8",
              },
              "name": "Bank 1",
            },
            "2": Object {
              "channels": Object {
                "1": "Ch. 1",
                "2": "Ch. 2",
                "3": "Ch. 3",
                "4": "Ch. 4",
                "5": "Ch. 5",
                "6": "Ch. 6",
                "7": "Ch. 7",
                "8": "Ch. 8",
              },
              "name": "Bank 2",
            },
            "3": Object {
              "channels": Object {
                "1": "Ch. 1",
                "2": "Ch. 2",
                "3": "Ch. 3",
                "4": "Ch. 4",
                "5": "Ch. 5",
                "6": "Ch. 6",
                "7": "Ch. 7",
                "8": "Ch. 8",
              },
              "name": "Bank 3",
            },
            "4": Object {
              "channels": Object {
                "1": "Ch. 1",
                "2": "Ch. 2",
                "3": "Ch. 3",
                "4": "Ch. 4",
                "5": "Ch. 5",
                "6": "Ch. 6",
                "7": "Ch. 7",
                "8": "Ch. 8",
              },
              "name": "Bank 4",
            },
          },
        }
      }
      uistatus={
        Object {
          "bank": Object {
            "1": "READY",
            "2": "DISABLED",
            "3": "READY",
            "4": "READY",
          },
        }
      }
      ws_sender={[MockFunction]}
    />
    <div
      className="row text-center button-edit"
    >
      <div
        className="col-sm-4"
      >
        <button
          className="btn  btn-green btn-edit-panel btn-group-2"
          id="submit-edit"
          type="submit"
        >
          Ok
        </button>
      </div>
      <div
        className="col-sm-4"
      >
        <button
          className="btn btn-cancel btn-edit-panel btn-group-2"
          id="cancel-btn"
          onClick={[Function]}
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </form>
  <Modal
    animationDuration={500}
    blockScroll={true}
    center={true}
    classNames={Object {}}
    classes={
      Object {
        "closeButton": "styles_closeButton__20ID4",
        "closeIcon": "styles_closeIcon__1QwbI",
        "modal": "styles_modal__gNwvD",
        "modalCenter": "styles_modalCenter__L9F2w",
        "overlay": "styles_overlay__CLSq-",
        "transitionEnter": "styles_transitionEnter__3j_-a",
        "transitionEnterActive": "styles_transitionEnterActive___eQs7",
        "transitionExit": "styles_transitionExit__1KmEf",
        "transitionExitActive": "styles_transitionExitActive__1nQXw",
      }
    }
    closeIconSize={28}
    closeIconSvgPath={
      <path
        d="M28.5 9.62L26.38 7.5 18 15.88 9.62 7.5 7.5 9.62 15.88 18 7.5 26.38l2.12 2.12L18 20.12l8.38 8.38 2.12-2.12L20.12 18z"
      />
    }
    closeOnEsc={true}
    closeOnOverlayClick={true}
    focusTrapOptions={Object {}}
    focusTrapped={true}
    onClose={[Function]}
    open={true}
    role="dialog"
    showCloseIcon={true}
    styles={Object {}}
  >
    <h2
      style={
        Object {
          "color": "black",
        }
      }
    >
      Uh Oh!
    </h2>
    <p
      style={
        Object {
          "color": "black",
        }
      }
    >
      Each Label must be at least one character in length.
    </p>
  </Modal>
</div>
`;
